--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Tata Consultancy Services</h5>
-            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Software Developer</h6>
+            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;">Software Developer</h6>
             <p class="card-text">
               Current: From 5 Dec 2022, Pune SP1<br>
               Position: Software Developer at TCS, JLR Project<br>
@@ -155,7 +155,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Capgemini</h5>
-            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Software Developer</h6>
+            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;">Software Developer</h6>
             <p class="card-text">
               Joined: 2 July 2021, Pune (Talwade)<br>
               Projects: Worked on JLR Project<br>
@@ -178,7 +178,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Supero Software Private Limited</h5>
-            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Node.js Developer</h6>
+            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;"">Node.js Developer</h6>
             <p class="card-text">
               Duration: Till 23 June 2021<br>
               Position: Node.js Developer, Web Developer, Project Manager<br>
@@ -196,7 +196,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Global Counter Terrorism Council</h5>
-            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Web Developer</h6>
+            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;"">Web Developer</h6>
             <p class="card-text">
               Duration: 1 month (Nov 2020)<br>
               Position: Web Developer, WordPress Developer
