--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Tata Consultancy Services</h5>
-            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;">Software Developer</h6>
+            <h6 class="card-subtitle mb-2 "  style="color: #fff;">Software Developer</h6>
             <p class="card-text">
               Current: From 5 Dec 2022, Pune SP1<br>
               Position: Software Developer at TCS, JLR Project<br>
               Projects: Figma Lead Developer, Creating Figma Plugins
             </p>
-            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/VaishnaviSharma_Resume.pdf">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/VaishnaviSharma_8805785260_vaishnavisharma0045@gmail.com_CV.pdf">
               <i class="fas fa-file-contract"></i> Resume
             </a>
           </div>
@@ -155,7 +155,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Capgemini</h5>
-            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;">Software Developer</h6>
+            <h6 class="card-subtitle mb-2"  style="color: #fff;">Software Developer</h6>
             <p class="card-text">
               Joined: 2 July 2021, Pune (Talwade)<br>
               Projects: Worked on JLR Project<br>
@@ -164,7 +164,7 @@
             <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/JLRKudos.jpg">
               <i class="fas fa-award"></i> JLR Nomination
             </a>
-            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/On_The_Spot_Award">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/On_The_Spot_Award.pdf">
               <i class="fas fa-trophy"></i> On the Spot Award
             </a>
           </div>
@@ -178,7 +178,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Supero Software Private Limited</h5>
-            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;"">Node.js Developer</h6>
+            <h6 class="card-subtitle mb-2"  style="color: #fff;"">Node.js Developer</h6>
             <p class="card-text">
               Duration: Till 23 June 2021<br>
               Position: Node.js Developer, Web Developer, Project Manager<br>
@@ -196,7 +196,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
             <h5 class="card-title" style="color: #fff;">Global Counter Terrorism Council</h5>
-            <h6 class="card-subtitle mb-2 text-muted"  style="color: #fff;"">Web Developer</h6>
+            <h6 class="card-subtitle mb-2"  style="color: #fff;"">Web Developer</h6>
             <p class="card-text">
               Duration: 1 month (Nov 2020)<br>
               Position: Web Developer, WordPress Developer
